* 2014-11-14 - thorben.betten@open-xchange.com

 - Fix for bug 35470: Fixed check whether parent folder is a public PIM folder

* 2014-11-11 - martin.herfurth@open-xchange.com

 - Fix for bug 35419: Useless mail notification on state changes.

* 2014-11-11 - ioannis.chouklis@open-xchange.com

 - Fix for bug 35150: don't skip the '"' literal if it is preceded by a backslash '/'
 - Fix for bug 35416: use the correct 'FilterType' flag when listing custom mail filters

* 2014-11-11 - marcus.klein@open-xchange.com

 - Fix for bug 35408: corrected post install script for adding UserPermissionBits cache region to cache.ccf configuration file.

* 2014-11-10 - thorben.betten@open-xchange.com

 - Fix for bug 35141: Do not require administrator credentials in case "MASTER_AUTHENTICATION_DISABLED" is set to true
 - Fix for bug 35392: Added class guard when examining a cache event

* 2014-11-07 - thorben.betten@open-xchange.com

 - Fix for bug 35373: Only add transport properties if transport data has been set/inserted before

* 2014-11-06 - thorben.betten@open-xchange.com

 - Fix for bug 35374: Pass incoming request's IP address on redeem token call
 - Fix for bug 35359: Improved special /ajax/mail?action=all request fired when loading portal page

* 2014-11-05 - marcus.klein@open-xchange.com

 - US 72756024: backend packages can be built on RHEL7

* 2014-11-05 - thorben.betten@open-xchange.com

 - Fix for bug 35139: Allow "data" URI scheme in <img> src attribute
 - Fix for bug 35348: Drop weird attributes from start tags that break HTML parsing and added <center> tag to white-list

* 2014-11-03 - thorben.betten@open-xchange.com

 - Fix for bug 35291: Obey forbidden end tags when generating conform/well-formed HTML content
 - Fix for bug 34979: Honor "setFrom" parameter when composing forward message

* 2014-10-31 - thorben.betten@open-xchange.com

 - Fix for bug 35267: Explicitly specify header encoding when parsing multipart/form-upload requests with Apache FileUpload
