@@ -1,3 +1,7 @@
+* 2014-11-16 - thorben.betten@open-xchange.com
+
+ - Fix for bug 35471: Set NULL if Unified Mail is absent when serving 'io.ox/mail/unifiedInboxIdentifier' setting
+
 * 2014-11-14 - thorben.betten@open-xchange.com
 
  - Fix for bug 35470: Fixed check whether parent folder is a public PIM folder
